--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: The Blog of Christian Munte
 email: mail@munte.me
 description: >
-  Where Christian Munte talks about nonsense that is sometimes coherent.
+  Where I talk about nonsense that is sometimes coherent.
 logo: "/assets/images/logo.jpg"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://blog.munte.me" # the base hostname & protocol for your site
