--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,8 @@ bio: >
   Also enjoys talks of travel and finance.
 author_image: "/assets/images/author.jpg"
 twitter_username: cmunte132
-github_username:  pieiscool32
+linkedin_username: cmunte132
+github_username: pieiscool32
 
 # Google Analytics
 analytics_id: ""
